# fastapi-healthcheck

./: README.md  pyproject.toml
fastapi_healthcheck/: model.py  route.py  service.py
